<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/coursesFragment"
        android:icon="@drawable/ic_nav_courses"
        android:title="@string/nav_courses" />
    <item
        android:id="@+id/practiceFragment"
        android:icon="@drawable/ic_nav_practice"
        android:title="@string/nav_practice" />
    <item
        android:id="@+id/statsFragment"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/nav_stats" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>